Setup pypi test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,4 +39,4 @@ push-to-pypi:
       fi
 
     # using env variables from Gitlab: TWINE_USERNAME, TWINE_PASSWORD, TWINE_REPOSITORY_URL
-    - twine upload dist/*
+    - twine upload --repository $TWINE_REPOSITORY_URL_TEST -u $TWINE_USERNAME_TEST -p $TWINE_PASSWORD_TEST dist/*
