adding back the test stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,15 @@ variables:
 ###############################################################
 # Test Stage
 ###############################################################
+test:
+
+  stage: test
+  tags:
+    - kube
+  script:
+    - tox -e py36
+  except:
+    - images
 
 ###############################################################
 # Release Stage
