--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,13 +18,24 @@ variables:
 ###############################################################
 # Test Stage
 ###############################################################
-test:
-
+test-py36:
   stage: test
   tags:
     - kube
   script:
     - tox -e py36
+  except:
+    - images
+
+test-py35:
+  image: python:3.5
+  stage: test
+  tags:
+    - kube
+  before_script:
+    - pip3 install tox
+  script:
+    - tox -e py35
   except:
     - images
 
