--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,18 @@ test-py35:
   except:
     - images
 
+test-py27:
+  image: python:2.7
+  stage: test
+  tags:
+    - kube
+  before_script:
+    - pip install tox
+  script:
+    - tox -e py27
+  except:
+    - images
+
 ###############################################################
 # Release Stage
 ###############################################################
