Use 3.6 image for py36 test phase

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ variables:
 # Test Stage
 ###############################################################
 test-py36:
+  image: python:3.6
   stage: test
   tags:
     - kube
