Stop reading files (#16)
* Stop reading files during validation

* Bump version: 1.3.1 → 1.3.2

* Use 3.6 image for py36 test phase

* Install tox too

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,9 +19,12 @@ variables:
 # Test Stage
 ###############################################################
 test-py36:
+  image: python:3.6
   stage: test
   tags:
     - kube
+  before_script:
+    - pip3 install tox
   script:
     - tox -e py36
   except:
