Trigger polyswarm-transaction on merge to master

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
   - build
   - test
   - release
+  - trigger
 
 variables:
   DOCKER_HOST: tcp://localhost:2375/
@@ -66,3 +67,14 @@ release:
 
     # using env variables from Gitlab: TWINE_USERNAME, TWINE_PASSWORD, TWINE_REPOSITORY_URL
     - twine upload dist/*
+
+
+###############################################################
+# Trigger other CI builds
+###############################################################
+
+rebuild-polyswarmd-fast:
+  stage: trigger
+  only:
+    - master
+  trigger: externalci/polyswarm-transaction
