--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 bumpversion
-jsonschema==3.0.2
-pytest==3.9.2
-pytest-asyncio==0.9.0
-pytest-cov==2.6.0
-pytest-timeout==1.3.2
+pydantic==1.5.1
+pytest==5.4.1
+pytest-runner==5.2
+pytest-asyncio==0.12.0
+coverage==5.0.4
+pytest-timeout==1.3.4
