--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bumpversion
 pydantic==1.5.1
 pytest==5.4.1
 pytest-runner==5.2
+pytest-cov==2.9.0
 pytest-asyncio==0.12.0
 coverage==5.0.4
 pytest-timeout==1.3.4
