Add comments to schema & updated README

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py37,py36
 
 [testenv]
-commands = pytest --cov=polyswarmartifact --cov-append --cov-report=term-missing
+commands = pytest --cov-append --cov-report=term-missing
 deps = pytest
        pytest-cov
 depends = {py36,py37}: clean
