linting code w/ `Makefile` & `setup.cfg`
This also moves the bumpversion config into `setup.cfg` and adds
some use

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,15 @@
-[aliases]
-test=pytest
+[bumpversion]
+current_version = 1.4.0
+commit = True
+tag = False
 
-[coverage:run]
-source =
-	src
-omit =
-	env/*
-	venv/*
-	.env/*
-	.venv/*
+[bumpversion:file:setup.py]
+search = version='{current_version}'
+replace = version='{new_version}'
 
-[tool:pytest]
-norecursedirs =
-	env
-	venv
-	.env
-	.venv
-collect_ignore = ['setup.py']
+[bumpversion:file:src/polyswarmartifact/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
 
 [isort]
 atomic = True
@@ -30,14 +23,8 @@ multi_line_output = 3
 use_parentheses = True
 
 [flake8]
+exclude = docs
 max-line-length = 119
-exclude =
-        env
-        .env
-        .venv
-        venv
-        docs
-        *.egg_info
 ignore = E402,  # module imports not at top of file
 	E266,  # Too many leading '#' in comment
 	E402,  # module imports not at top of file
@@ -50,13 +37,11 @@ ignore = E402,  # module imports not at top of file
 	W503,  # line break before binary operator
 	W504,  # line break after binary operator
 	E266,  # missing whitespace around arithmetic operators
-  E213,  # Don't require `cls' / `self' as first argument of class / instance method
 
 [mypy]
 cache_dir = .mypy_cache
 check_untyped_defs = True
 files = src/polyswarmartifact
-mypy_path = stubshed
 ignore_missing_imports = True
 incremental = True
 pretty = True
