unpinning pydantic, fixing issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,12 @@ norecursedirs =
 	.env
 	.venv
 collect_ignore = ['setup.py']
+log_cli = true
+log_cli_level = INFO
+addopts =
+    -W ignore::DeprecationWarning
+    -v -s -rfExXs
+    --continue-on-collection-errors
 
 [isort]
 atomic = True
