--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 bumpversion
-coverage==5.0.4
-pydantic~=1.6.1
-pytest==5.4.1
-pytest-runner==5.2
-pytest-cov==2.9.0
-pytest-asyncio==0.12.0
-pytest-timeout==1.3.4
+coverage
+pydantic
+pytest
+pytest-runner
+pytest-cov
+pytest-asyncio
+pytest-timeout
