--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,20 +29,8 @@ dev-pypi:
 ###############################################################
 # Test Stage
 ###############################################################
-test-py38:
-  image: $REPO_URL/python:3.8-slim-buster
-  stage: test
-  tags:
-    - kube-small-new
-  before_script:
-    - pip3 install tox
-  script:
-    - tox -e py38
-  except:
-    - images
-
 test-py39:
-  image: $REPO_URL/python:3.9-slim-bullseye
+  image: $REPO_URL/public/docker/library/python:3.9-slim-bullseye
   stage: test
   tags:
     - kube-small-new
@@ -50,6 +38,18 @@ test-py39:
     - pip3 install tox
   script:
     - tox -e py39
+  except:
+    - images
+
+test-py310:
+  image: $REPO_URL/public/docker/library/python:3.10-slim-bullseye
+  stage: test
+  tags:
+    - kube-small-new
+  before_script:
+    - pip3 install tox
+  script:
+    - tox -e py310
   except:
     - images
 
