--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ default:
 ###############################################################
 dev-pypi:
   tags:
-    - kube-small-new
+    - stage-kube-newer
   stage: build
   before_script:
     - pip3 install -q --upgrade pip setuptools twine wheel bump2version
@@ -33,7 +33,7 @@ test-py39:
   image: $REPO_URL/public/docker/library/python:3.9-slim-bullseye
   stage: test
   tags:
-    - kube-small-new
+    - stage-kube-newer
   before_script:
     - pip3 install tox
   script:
@@ -45,7 +45,7 @@ test-py310:
   image: $REPO_URL/public/docker/library/python:3.10-slim-bullseye
   stage: test
   tags:
-    - kube-small-new
+    - stage-kube-newer
   before_script:
     - pip3 install tox
   script:
@@ -58,7 +58,7 @@ test-py310:
 ###############################################################
 release-pypi:
   tags:
-    - kube-small-new
+    - stage-kube-newer
   stage: release
   script:
     # release to internal pypi but do not tag yet
