--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ dev-pypi:
     - stage-kube-newer
   stage: build
   before_script:
-    - pip3 install -q --upgrade pip build twine bump-my-version
+    - pip3 install -q --upgrade pip build twine bump-my-version "click<8.3"
   script:
     - bump-my-version bump --no-commit --no-tag dev
     - python -m build
